# pyclu

./: .gitignore  .pdm-python  README-packaging.md  README.md  pyproject.toml  retest
.github/ISSUE_TEMPLATE/: feature_request.md
src/pyclu/: __init__.py  __main__.py  pyclu.py  pyclu_types.py
src/pyclu/generators_bash/: __init__.py  generator_cli.py  generator_environment.py
src/pyclu/types/: __init__.py  environment.py  types.py  variable.py
tests/behavior/: test_clu.py  utils.py
tests/data/: ap-specs.json
tests/data.expected/: ap.bash  environment
